--- a/landing/index.html
+++ b/landing/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
-    <cloud-root></cloud-root>
+    <a href="/first">First</a>
+    <a href="/second">Second</a>
   </body>
 </html>
